k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: judennadi/flenjo-client

---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  # type: LoadBalancer
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
