k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgresql
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresql
          image: postgres:alpine
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
