k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: hazard.com
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/?(.*)
            backend:
              service:
                name: server
                port:
                  number: 5000
